src/mermaid/ascii/flowchart/snapshots/veol__mermaid__ascii__flowchart__render__tests__render_ascii_charset_for_two_nodes.snap
---
source: src/mermaid/ascii/flowchart/render.rs
expression: "render_ascii(\"graph LR\\nA --> B\")"
---
+---+     +---+
|   |     |   |
| A |-----> B |
|   |     |   |
+---+     +---+
