src/mermaid/ascii/flowchart/snapshots/veol__mermaid__ascii__flowchart__render__tests__render_branch_lr.snap
---
source: src/mermaid/ascii/flowchart/render.rs
expression: "render_src(\"graph LR\\nA --> B\\nA --> C\")"
---
┌───┐     ┌───┐
│   │     │   │
│ A ├─────► B │
│   │     │   │
└─┬─┘     └───┘
  │
  │
  │
  │       ┌───┐
  │       │   │
  └───────► C │
          │   │
          └───┘
