src/mermaid/ascii/flowchart/snapshots/veol__mermaid__ascii__flowchart__render__tests__render_chain_with_ampersand.snap
---
source: src/mermaid/ascii/flowchart/render.rs
expression: "render_src(\"graph LR\\nA & B --> C\")"
---
┌───┐     ┌───┐
│   │     │   │
│ A ├──┼──► C │
│   │  │  │   │
└───┘  │  └───┘
       │
  ┌────┘
  │
┌─┴─┐
│   │
│ B │
│   │
└───┘
