src/mermaid/ascii/flowchart/snapshots/veol__mermaid__ascii__flowchart__render__tests__render_classdef_assignment_does_not_break_render.snap
---
source: src/mermaid/ascii/flowchart/render.rs
expression: "render_src(\"graph LR\\nclassDef important fill:red\\nA:::important --> B\")"
---
┌───┐     ┌───┐
│   │     │   │
│ A ├─────► B │
│   │     │   │
└───┘     └───┘
