src/mermaid/ascii/flowchart/snapshots/veol__mermaid__ascii__flowchart__render__tests__render_diamond_decision_with_labels.snap
---
source: src/mermaid/ascii/flowchart/render.rs
expression: "render_src(\"graph LR\\nA{Decide} -->|yes| B\\nA -->|no| C\\nB --> D\\nC --> D\")"
---
╱────────╲     ┌───┐     ┌───┐
│        │     │   │     │   │
│ Decide ├─yes─► B ├──┼──► D │
│        │     │   │  │  │   │
╲────┬───╱     └───┘  │  └───┘
     │                │
     │           ┌────┘
    no           │
     │         ┌─┴─┐
     │         │   │
     └─────────► C │
               │   │
               └───┘
