src/mermaid/ascii/flowchart/snapshots/veol__mermaid__ascii__flowchart__render__tests__render_hexagon_node_shape.snap
---
source: src/mermaid/ascii/flowchart/render.rs
expression: "render_src(\"graph LR\\nA{{Hex}} --> B\")"
---
╱─────╲     ┌───┐
│     │     │   │
│ Hex ├─────► B │
│     │     │   │
╲─────╱     └───┘
