src/mermaid/ascii/flowchart/snapshots/veol__mermaid__ascii__flowchart__render__tests__render_long_label_node.snap
---
source: src/mermaid/ascii/flowchart/render.rs
expression: "render_src(\"graph LR\\nA[A very long label here] --> B\")"
---
┌────────────────────────┐     ┌───┐
│                        │     │   │
│ A very long label here ├─────► B │
│                        │     │   │
└────────────────────────┘     └───┘
