src/mermaid/ascii/flowchart/snapshots/veol__mermaid__ascii__flowchart__render__tests__render_lr_then_td_consistency_simple.snap
---
source: src/mermaid/ascii/flowchart/render.rs
expression: "format!(\"LR:\\n{}\\n---\\nTD:\\n{}\", lr, td)"
---
LR:
┌───┐     ┌───┐
│   │     │   │
│ A ├─────► B │
│   │     │   │
└───┘     └───┘
---
TD:
┌───┐
│   │
│ A │
│   │
└─┬─┘
  │
  │
  │
┌─▼─┐
│   │
│ B │
│   │
└───┘
